--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
             "type": "object",
             "title": "Test configuration",
             "properties": {
-                "synclocal.destination":{
-                    "type":"string",
+                "synclocal.destination": {
+                    "type": "string",
                     "default": "C:\\wamp\\www\\"
                 }
             }
@@ -40,15 +40,15 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
+        "@types/mocha": "^2.2.42",
+        "@types/node": "^7.10.6",
+        "tslint": "^5.17.0",
         "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "tslint": "^5.8.0",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "vscode": "^1.1.34"
     },
     "dependencies": {
-        "@types/fs-extra": "^5.0.4",
-        "fs-extra": "^7.0.0"
+        "@types/fs-extra": "^5.1.0",
+        "fs-extra": "^7.0.1"
     },
     "repository": {
         "type": "git",
